--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watchAll"
+  },
+  "standard": {
+    "env": ["jest"]
   },
   "keywords": [],
   "author": "",
@@ -14,5 +18,9 @@
     "jest": "25.2.6",
     "lint-staged": "10.1.1",
     "standard": "14.3.3"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "mongoose": "^5.9.7"
   }
 }
