--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "git-commit-msg-linter": "^2.4.2"
+    "@types/node": "^13.11.0",
+    "git-commit-msg-linter": "^2.4.2",
+    "typescript": "^3.8.3"
   },
   "dependencies": {}
 }
