--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^13.11.0",
+    "@typescript-eslint/eslint-plugin": "2",
+    "eslint": "6",
+    "eslint-config-standard-with-typescript": "^15.0.1",
+    "eslint-plugin-import": "2",
+    "eslint-plugin-node": "11",
+    "eslint-plugin-promise": "4",
+    "eslint-plugin-standard": "4",
     "git-commit-msg-linter": "^2.4.2",
     "typescript": "^3.8.3"
   },
