chore: add husky and lint-staged

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "eslint-plugin-promise": "4",
     "eslint-plugin-standard": "4",
     "git-commit-msg-linter": "^2.4.2",
+    "husky": "^4.2.3",
+    "lint-staged": "^10.1.1",
     "typescript": "^3.8.3"
   },
   "dependencies": {}
