--- a/package.json
+++ b/package.json
@@ -3,22 +3,30 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "jest"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^25.2.1",
     "@types/node": "^13.11.0",
     "@typescript-eslint/eslint-plugin": "2",
     "eslint": "6",
     "eslint-config-standard-with-typescript": "^15.0.1",
     "eslint-plugin-import": "2",
     "eslint-plugin-node": "11",
+    "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-promise": "4",
     "eslint-plugin-standard": "4",
     "git-commit-msg-linter": "^2.4.2",
     "husky": "^4.2.3",
+    "jest": "^25.2.7",
     "lint-staged": "^10.1.1",
+    "prettier": "^2.0.2",
+    "prettier-eslint": "^9.0.1",
+    "ts-jest": "^25.3.1",
     "typescript": "^3.8.3"
   },
   "dependencies": {}
