--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,6 +1,3 @@
 {
-  "*.ts": [
-    "eslint 'src/**' --fix",
-    "git add"
-  ]
+  "*.ts": ["eslint 'src/**' --fix", "yarn run test:staged", "git add"]
 }
